[gd_scene load_steps=8 format=3 uid="uid://naxxreavcae8"]

[ext_resource type="Texture2D" uid="uid://ch8stip28flkd" path="res://resources/sprites/folderwithfile.png" id="1_v38wl"]
[ext_resource type="Texture2D" uid="uid://cdvuptxyankmj" path="res://resources/sprites/folderopenwithfile.png" id="2_fr6q5"]
[ext_resource type="Script" path="res://resources/scenes/classmanager/scripts/classmanagerfolder.gd" id="3_w04ev"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://resources/fonts/Vermin Vibes 1989.ttf" id="4_u02bm"]
[ext_resource type="AudioStream" uid="uid://bsm2hpebhmopm" path="res://resources/audio/blipSelect.wav" id="5_07f6p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8c4df"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_g58ae"]
font = ExtResource("4_u02bm")
font_color = Color(0, 0, 0, 1)

[node name="classmanagerfolder" type="TextureButton"]
anchors_preset = -1
anchor_left = 0.0694444
anchor_top = 0.481481
anchor_right = 0.101411
anchor_bottom = 0.54321
offset_left = -80.0
offset_top = -312.0
offset_right = -76.825
offset_bottom = -312.0
scale = Vector2(0.920626, 1)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_v38wl")
texture_pressed = ExtResource("1_v38wl")
texture_hover = ExtResource("2_fr6q5")
stretch_mode = 4
script = ExtResource("3_w04ev")
metadata/_edit_use_anchors_ = true

[node name="selected_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = 1.025
anchor_right = 1.4
anchor_bottom = 1.325
offset_left = -1.0
offset_top = 1.0
offset_right = -0.999969
offset_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8c4df")
metadata/_edit_use_anchors_ = true

[node name="filename" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0999988
anchor_top = 1.04999
anchor_right = 1.24999
anchor_bottom = 1.39998
grow_horizontal = 2
grow_vertical = 2
text = "Aulas"
label_settings = SubResource("LabelSettings_g58ae")
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="select_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_07f6p")

[connection signal="pressed" from="." to="." method="_on_pressed"]
